<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cisc275.edu</groupId>
	<artifactId>dragExamples</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>13</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.2</version>
				<configuration>
					<release>13</release>
					<compilerArgs>--enable-preview</compilerArgs>
					<mainClass>pkgMain.MyMovingImage0</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>

		<!-- Generic properties -->
		<!--<JavaFX.Platform>win</JavaFX.Platform>-->
		<JavaFX.Platform>mac</JavaFX.Platform>
		<!-- <JavaFX.Platform>linux</JavaFX.Platform> -->

		<java.version>1.13</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<!-- Spring -->
		<spring-framework.version>5.1.8.RELEASE</spring-framework.version>

		<!-- Hibernate / JPA -->
		<hibernate.version>5.0.2.Final</hibernate.version>

		<!-- Logging -->
		<logback.version>1.2.3</logback.version>
		<slf4j.version>1.7.12</slf4j.version>

		<!-- Test -->
		<junit.version>4.12</junit.version>

	</properties>
	<dependencies>


		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>13</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>13</version>
			<classifier>${JavaFX.Platform}</classifier>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>13</version>
			<classifier>${JavaFX.Platform}</classifier>
		</dependency>


		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>13</version>
		</dependency>
	</dependencies>



</project>